--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,9 @@
     "autoprefixer": "^10.4.22",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.18",
-    "vite": "^7.2.4"
+    "unplugin-auto-import": "^0.17.5",
+    "unplugin-vue-components": "^0.26.0",
+    "vite": "^7.2.4",
+    "vite-plugin-compression": "^0.5.1"
   }
 }
