feat: 引入后端独立 Dockerfile、前端 Dashboard 页面，并为容器添加时区配置。

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - "8000:8000"
     environment:
       - DATABASE_URL=${DATABASE_URL}
+      - TZ=Asia/Shanghai
     env_file:
       - ./backend/.env
 
@@ -16,6 +17,8 @@ services:
     build:
       context: ./frontend
     restart: always
+    environment:
+      - TZ=Asia/Shanghai
     ports:
       - "80:80"
     depends_on:
